--- a/fe-src/index.css
+++ b/fe-src/index.css
@@ -4,6 +4,9 @@
 }
 body {
   margin: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(179.17deg, #ffffff 0%, #e6f4f1 100%);
 }
 .formulario {
   height: 700px;
