--- a/fe-src/index.css
+++ b/fe-src/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(179.17deg, #ffffff 0%, #e6f4f1 100%);
+  background: linear-gradient(191.08deg, #ffffff 8.17%, #def4f0 62.61%);
 }
 .formulario {
   height: 700px;
