--- a/fe-src/pages/home.css
+++ b/fe-src/pages/home.css
@@ -1,1 +1,19 @@
+.main {
+  height: 92vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
 
+.tittle {
+  color: #eb6372;
+  font-size: 36px;
+  margin: 10 0;
+}
+
+.text {
+  font-size: 24px;
+  text-align: center;
+}
