--- a/fe-src/pages/home.css
+++ b/fe-src/pages/home.css
@@ -7,13 +7,17 @@
   gap: 20px;
 }
 
-.tittle {
+.title {
+  font-family: "Poppins", sans-serif;
   color: #eb6372;
   font-size: 36px;
   margin: 10 0;
 }
 
 .text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 24px;
   text-align: center;
 }
