--- a/fe-src/pages/reportpets.css
+++ b/fe-src/pages/reportpets.css
@@ -1,19 +1,40 @@
-.main-mascotas {
+.report-container {
+  height: 92vh;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-top: 20px;
+  align-items: center;
+  gap: 15px;
 }
 
 .tittle-mascotas {
   font-family: "Poppins", sans-serif;
-  font-size: 24px;
+  font-size: 36px;
+  text-align: center;
 }
 
-.text {
+.reportpet-text {
   font-family: "Poppins", sans-serif;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 18.75px;
+  font-style: normal;
+  font-size: 16px;
   text-align: center;
+}
+.imageupload-container {
+  width: 335px;
+  height: 180px;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.foto-input {
+  width: 335px;
+  height: 180px;
+  border-radius: 3px;
+  object-fit: contain;
+}
+
+#map {
+  border: solid;
+  width: 334px;
+  height: 253px;
 }
