--- a/fe-src/pages/reportpets.css
+++ b/fe-src/pages/reportpets.css
@@ -32,3 +32,21 @@
   border-radius: 3px;
   object-fit: contain;
 }
+
+.search-form {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.form1 {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  width: 335px;
+}
+.input-report {
+  font-size: 24px;
+  width: 335px;
+  height: 50px;
+  padding: 0;
+}
